[tool.poetry]
name = "hackathon-makeup"
version = "0.1.0"
description = ""
authors = [
    "Konstantin Grotov <konstantin.grotov@gmail.com>",
    "Artem Ponomarenko <slfdstrctd@yandex.ru>"
]
readme = "README.md"

packages = [
    { include = "diffusion" },
    { include = "web" }
]

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.20.2"
accelerate = "^0.22.0"
safetensors = "^0.3.3"
transformers = "^4.32.1"

[tool.poetry.group.web.dependencies]
streamlit = "^1.26.0"

[tool.poetry.scripts]
