[tool.poetry]
name = "hackathon-makeup"
version = "0.1.0"
description = ""
authors = [
    "Konstantin Grotov <konstantin.grotov@gmail.com>",
    "Artem Ponomarenko <slfdstrctd@yandex.ru>"
]
readme = "README.md"

packages = [
    { include = "diffusion" },
    { include = "web" }
]

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.20.2"
accelerate = "^0.22.0"
safetensors = "^0.3.3"
transformers = "^4.32.1"
opencv-python = "^4.8.0.76"
torch = [
  {url = "https://download.pytorch.org/whl/cpu/torch-1.10.0%2Bcpu-cp39-cp39-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cu117/torch-2.0.1%2Bcu117-cp310-cp310-win_amd64.whl", markers = "sys_platform == 'win32'"}
]
setuptools = "^68.2.0"
matplotlib = "^3.7.2"

[tool.poetry.group.web.dependencies]
streamlit = "^1.26.0"

[tool.poetry.scripts]
